--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
     "name": "hyvor-talk-react",
-    "version": "2.0.0",
+    "version": "2.0.0-beta.0",
     "description": "React Library for Hyvor Talk",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
     "scripts": {
-        "rollup": "rollup -c"
+        "build": "rollup -c",
+        "watch": "rollup -c -w"
     },
     "repository": {
         "type": "git",
