--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "hyvor-talk-react",
-    "version": "2.0.0-beta.0",
+    "version": "1.1.0",
     "description": "React Library for Hyvor Talk",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
